--- a/install
+++ b/install
@@ -13,11 +13,12 @@ for rc in *rc tmux.conf; do
 done
 
 # Leiningen
+# https://github.com/sattvik/lein-tarsier
 mkdir -p ~/bin
 wget https://raw.github.com/technomancy/leiningen/preview/bin/lein --no-check-certificate -O ~/bin/lein &&
 chmod +x ~/bin/lein &&
 ~/bin/lein
-[ -e ~/.lein/profiles.clj ] || echo '{:user {:plugins [[lein-tarsier "0.9.4"]]}}' > ~/.lein/profiles.clj # TODO
+[ -e ~/.lein/profiles.clj ] || echo '{:user {:plugins [[lein-tarsier "0.10.0"]]}}' > ~/.lein/profiles.clj
 
 # tmux on OSX
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
