--- a/install
+++ b/install
@@ -6,7 +6,7 @@
 # RC files
 cd `dirname $BASH_SOURCE`
 touch bashrc-extra
-for rc in *rc tmux.conf; do
+for rc in *rc *profile tmux.conf; do
   mkdir -pv bak
   mv -v ~/.$rc bak/
   ln -sv $(cd $(dirname $rc); pwd)/$rc ~/.$rc
