Update install script

--- a/install
+++ b/install
@@ -8,7 +8,7 @@ cd `dirname $BASH_SOURCE`
 touch bashrc-extra
 for rc in *rc *profile tmux.conf; do
   mkdir -pv bak
-  [ -e ~/.$rc ] && mv -v ~/.$rc bak/
+  [ -e ~/.$rc ] && mv -v ~/.$rc bak/.$rc
   ln -sv $(cd $(dirname $rc); pwd)/$rc ~/.$rc
 done
 
@@ -19,15 +19,18 @@ if [ ! -e ~/.git-prompt.sh ]; then
 fi
 
 # fzf
-git clone https://github.com/junegunn/fzf.git ~/.fzf
+if [ ! -d ~/.fzf ]; then
+  git clone https://github.com/junegunn/fzf.git ~/.fzf
+else
+  (cd ~/.fzf; git pull)
+fi
 yes | ~/.fzf/install
 
 # Leiningen
 # https://github.com/sattvik/lein-tarsier
 mkdir -p ~/bin
 wget https://raw.github.com/technomancy/leiningen/preview/bin/lein --no-check-certificate -O ~/bin/lein &&
-chmod +x ~/bin/lein &&
-~/bin/lein
+chmod +x ~/bin/lein version
 [ -e ~/.lein/profiles.clj ] || echo '{:user {:plugins [[lein-tarsier "0.10.0"]]}}' > ~/.lein/profiles.clj
 
 # tmux on OSX
