--- a/install
+++ b/install
@@ -34,7 +34,8 @@ if [ $(uname -s) = 'Darwin' ]; then
     ag ant cmus coreutils cscope ctags \
     fish git gnuplot graphviz imagemagick leiningen libgit2 \
     macvim maven memcached mysql ranger reattach-to-user-namespace redis \
-    rust sl tmux tree unrar vim wget zsh
+    rust sl tmux tree unrar vim wget zsh \
+    scala sbt
 else
   rm ~/.tmux.conf
   grep -v reattach-to-user-namespace tmux.conf > ~/.tmux.conf
