--- a/install
+++ b/install
@@ -40,7 +40,7 @@ if [ $(uname -s) = 'Darwin' ]; then
     ag ant cmus coreutils cscope ctags \
     fish git gnuplot graphviz imagemagick leiningen \
     maven memcached mysql redis \
-    sl tmux tree unrar vim wget zsh
+    sl tmux tree unrar vim wget zsh jq
   brew install macvim
 fi
 
