--- a/install
+++ b/install
@@ -15,8 +15,7 @@ done
 
 # git-prompt
 if [ ! -e ~/.git-prompt.sh ]; then
-  curl https://raw.github.com/git/git/master/contrib/completion/git-prompt.sh \
-    -o ~/.git-prompt.sh
+  wget https://raw.githubusercontent.com/git/git/master/contrib/completion/git-prompt.sh -O ~/.git-prompt.sh
 fi
 
 # scripts
