--- a/install
+++ b/install
@@ -40,8 +40,7 @@ if [ $(uname -s) = 'Darwin' ]; then
   brew install \
     ag ant cmus coreutils cscope ctags exiftool \
     fish git gnuplot graphviz imagemagick leiningen \
-    maven ranger tmux tree vim wget zsh jq macvim ruby go
-  gem install coderay
+    maven ranger tmux tree vim wget zsh jq macvim ruby go highlight
   command -v blsd > /dev/null ||
     (bash <(curl -fL https://raw.githubusercontent.com/junegunn/blsd/master/install) && mv blsd ~/bin)
 fi
