--- a/install
+++ b/install
@@ -39,11 +39,21 @@ if [ $(uname -s) = 'Darwin' ]; then
   # brew update
   brew install \
     ag ant cmus coreutils cscope ctags exiftool \
-    fish git gnuplot graphviz imagemagick leiningen \
-    maven ranger tmux tree vim wget zsh jq macvim ruby go highlight
+    fish git gnuplot graphviz imagemagick leiningen sbt \
+    maven ranger tmux tree vim wget zsh jq macvim ruby python go highlight
   command -v blsd > /dev/null ||
     (bash <(curl -fL https://raw.githubusercontent.com/junegunn/blsd/master/install) && mv blsd ~/bin)
-fi
+
+  # ensime: https://ensime.github.io/editors/vim/install/
+  pip install websocket-client sexpdata
+  # - http://ensime.github.io/build_tools/sbt/
+  mkdir -p ~/.sbt/0.13/plugins
+  sed 's/^ * # //' > ~/.sbt/0.13/plugins/plugins.sbt <<-EOF
+    # if (sys.props("java.version").startsWith("1.6"))
+    #   addSbtPlugin("org.ensime" % "sbt-ensime" % "1.0.0")
+    # else
+    #   addSbtPlugin("org.ensime" % "sbt-ensime" % "1.11.2")
+EOF
 
 git config --global user.email "junegunn.c@gmail.com"
 git config --global user.name "Junegunn Choi"
