--- a/install
+++ b/install
@@ -44,6 +44,8 @@ if [ $(uname -s) = 'Darwin' ]; then
   command -v blsd > /dev/null ||
     (bash <(curl -fL https://raw.githubusercontent.com/junegunn/blsd/master/install) && mv blsd ~/bin)
 
+  brew cask install iterm2 spectacle vagrant visualvm spotifree flux flycut
+
   # ensime: https://ensime.github.io/editors/vim/install/
   pip install websocket-client sexpdata
   # - http://ensime.github.io/build_tools/sbt/
