--- a/install
+++ b/install
@@ -37,11 +37,14 @@ if [ $(uname -s) = 'Darwin' ]; then
 
   echo "Updating homebrew"
   brew install \
-    ag ant cmus coreutils cscope ctags exiftool \
+    ag ant cmus coreutils cscope exiftool \
     fish git gnuplot graphviz imagemagick leiningen sbt \
     maven ranger tmux tree vim wget zsh jq macvim ruby python go highlight
   command -v blsd > /dev/null ||
     (bash <(curl -fL https://raw.githubusercontent.com/junegunn/blsd/master/install) && mv blsd ~/bin)
+
+  brew tap universal-ctags/universal-ctags
+  brew install --HEAD universal-ctags
 
   brew cask install iterm2 spectacle vagrant visualvm spotifree flux flycut
 fi
