--- a/install
+++ b/install
@@ -43,6 +43,10 @@ if [ $(uname -s) = 'Darwin' ]; then
   command -v blsd > /dev/null ||
     (bash <(curl -fL https://raw.githubusercontent.com/junegunn/blsd/master/install) && mv blsd ~/bin)
 
+  # Create
+  gem install gem-ctags
+  gem ctags
+
   brew tap universal-ctags/universal-ctags
   brew install --HEAD universal-ctags
 
