--- a/install
+++ b/install
@@ -50,7 +50,7 @@ if [ $(uname -s) = 'Darwin' ]; then
   brew tap universal-ctags/universal-ctags
   brew install --HEAD universal-ctags
 
-  brew cask install xquartz iterm2 spectacle virtualbox virtualbox-extension-pack vagrant mat visualvm spotifree flux flycut
+  brew cask install xquartz iterm2 spectacle virtualbox virtualbox-extension-pack vagrant mat visualvm spotifree flux flycut keycastr
 fi
 
 git config --global user.email "junegunn.c@gmail.com"
