--- a/install
+++ b/install
@@ -39,7 +39,12 @@ if [ $(uname -s) = 'Darwin' ]; then
   brew install \
     ag ant cmus coreutils cscope exiftool \
     fish git gnuplot graphviz imagemagick leiningen sbt \
-    maven ranger tmux tree vim wget zsh jq macvim ruby python go highlight reattach-to-user-namespace
+    maven ranger tree vim wget zsh jq macvim ruby python go highlight reattach-to-user-namespace
+
+  # Patched version of tmux
+  brew tap waltarix/homebrew-customs
+  brew install waltarix/homebrew-customs/tmux
+
   command -v blsd > /dev/null ||
     (bash <(curl -fL https://raw.githubusercontent.com/junegunn/blsd/master/install) && mv blsd ~/bin)
 
