--- a/install
+++ b/install
@@ -39,7 +39,7 @@ if [ "$(uname -s)" = 'Darwin' ]; then
 
   echo "Updating homebrew"
   brew install \
-    ag ripgrep ant cmus coreutils cscope exiftool doxygen liboauth \
+    fd ag ripgrep ant cmus coreutils cscope exiftool doxygen liboauth \
     fish git graphviz imagemagick leiningen sbt \
     maven ranger tree vim wget zsh jq macvim ruby python go highlight reattach-to-user-namespace
   brew install gnuplot --with-qt@5.7
