--- a/install
+++ b/install
@@ -66,6 +66,7 @@ fi
 git config --global user.email "junegunn.c@gmail.com"
 git config --global user.name "Junegunn Choi"
 
+git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 tmux source-file ~/.tmux.conf
 
 ./install-vim
