--- a/install
+++ b/install
@@ -40,7 +40,7 @@ if [ "$(uname -s)" = 'Darwin' ]; then
     fd ag ripgrep ant cmus coreutils cscope exiftool doxygen liboauth \
     fish git graphviz imagemagick leiningen sbt \
     maven ranger tree vim wget zsh jq macvim ruby python go highlight reattach-to-user-namespace
-  brew install gnuplot --with-qt@5.7
+  brew install gnuplot --with-qt --with-cairo
 
   # Patched version of tmux
   brew tap waltarix/homebrew-customs
@@ -56,7 +56,7 @@ if [ "$(uname -s)" = 'Darwin' ]; then
   brew tap universal-ctags/universal-ctags
   brew install --HEAD universal-ctags
 
-  brew cask install xquartz iterm2 spectacle virtualbox virtualbox-extension-pack \
+  brew cask install xquartz iterm2-nightly spectacle virtualbox virtualbox-extension-pack \
     vagrant mat visualvm spotifree flux flycut keycastr fluid
 else
   rm -f ~/.tmux.conf
