--- a/install
+++ b/install
@@ -38,12 +38,12 @@ if [ "$(uname -s)" = 'Darwin' ]; then
   echo "Updating homebrew"
   brew cask install xquartz iterm2 caffeine spectacle \
     virtualbox virtualbox-extension-pack \
-    vagrant mat visualvm flux flycut keycastr fluid java google-backup-and-sync
+    vagrant mat visualvm fluid java google-backup-and-sync
 
   brew install \
     fd ag ripgrep ant cmus coreutils cscope exiftool doxygen liboauth \
     fish git graphviz imagemagick leiningen sbt gnupg \
-    maven ranger tree vim wget zsh jq macvim ruby python go highlight \
+    maven ranger tree vim wget zsh jq macvim ruby python go highlight bat \
     reattach-to-user-namespace
 
   brew install gnuplot --with-qt --with-cairo
