--- a/install
+++ b/install
@@ -38,7 +38,7 @@ if [ "$(uname -s)" = 'Darwin' ]; then
   echo "Updating homebrew"
   brew cask install xquartz iterm2 caffeine spectacle \
     virtualbox virtualbox-extension-pack \
-    vagrant mat visualvm fluid java google-backup-and-sync
+    vagrant mat visualvm fluid java google-backup-and-sync rstudio r mactex
 
   brew install \
     fd ag ripgrep ant cmake cmus coreutils cscope exiftool doxygen liboauth \
