--- a/install
+++ b/install
@@ -44,16 +44,12 @@ if [ "$(uname -s)" = 'Darwin' ]; then
     fd ag ripgrep ant cmake cmus coreutils cscope exiftool doxygen liboauth \
     fish git graphviz imagemagick leiningen sbt gnupg \
     maven ranger tree vim wget zsh jq macvim ruby python go highlight bat \
-    reattach-to-user-namespace pinentry-mac
+    reattach-to-user-namespace pinentry-mac bash-completion tmux
 
   brew install gnuplot --with-qt --with-cairo
 
   brew tap universal-ctags/universal-ctags
   brew install --HEAD universal-ctags
-
-  # Patched version of tmux
-  brew tap waltarix/homebrew-customs
-  brew install waltarix/homebrew-customs/tmux
 
   command -v blsd > /dev/null ||
     (bash <(curl -fL https://raw.githubusercontent.com/junegunn/blsd/master/install) && mv blsd ~/bin)
