--- a/install
+++ b/install
@@ -36,7 +36,7 @@ if [ "$(uname -s)" = 'Darwin' ]; then
     ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 
   echo "Updating homebrew"
-  brew cask install xquartz iterm2 caffeine spectacle \
+  brew cask install xquartz iterm2 keepingyouawake spectacle \
     virtualbox virtualbox-extension-pack \
     vagrant mat visualvm fluid google-backup-and-sync rstudio r mactex osxfuse \
     karabiner-elements
